--- a/scss/common/_search.scss
+++ b/scss/common/_search.scss
@@ -159,7 +159,7 @@
   }
 
   .search-container & {
-    margin-left: $grid-gutter-width-lg;
+    margin-left: $spacer-x-lg;
 
     .date-picker-wrapper {
       margin-top: $card-inner-spacer-y;
