--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -13,7 +13,7 @@
 .categories-and-latest {
   div {
     &.categories.column {
-      margin-right: $grid-gutter-width;
+      margin-right: $spacer-x;
     }
   }
 
