--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -264,7 +264,7 @@
     background-color: color-chooser($black-divider, $white-divider);
     border-bottom: 0;
     display: inline-block;
-    font-size: $font-size-small;
+    font-size: $font-size-sm;
     height: ($font-size-base * $line-height-base);
     margin: 0 0 0 ($card-inner-spacer-x / 2);
     padding: 0 ($card-inner-spacer-x / 2);
