--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -5,7 +5,7 @@
 .categories-and-latest,
 .categories-and-top {
   .discourse-tags .discourse-tag {
-    font-size: $font-size-small;
+    font-size: $font-size-sm;
     margin-right: $spacer-sm;
   }
 }
