--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -3,7 +3,7 @@
   background-color: color-chooser($chip-bg-dark, $chip-bg-light);
   border-radius: 1em;
   color: unquote('$primary');
-  font-size: $font-size-small;
+  font-size: $font-size-sm;
   padding: ($chip-padding-y / 2) ($chip-padding-x / 2);
 }
 
@@ -181,7 +181,7 @@
 
     p {
       &.help {
-        font-size: $font-size-small;
+        font-size: $font-size-sm;
       }
     }
 
