--- a/scss/common/_dashboard.scss
+++ b/scss/common/_dashboard.scss
@@ -29,7 +29,7 @@
 
       .report {
         .info {
-          font-size: $font-size-small;
+          font-size: $font-size-sm;
           margin-left: $spacer-x-inline;
         }
       }
