Use general `$spacer`s instead of `$card-margin`s

--- a/scss/common/_search.scss
+++ b/scss/common/_search.scss
@@ -3,7 +3,7 @@
 
   align-items: flex-start;
   display: flex;
-  margin-bottom: $card-margin-y;
+  margin-bottom: $spacer-y;
 
   .avatar {
     margin-right: $card-inner-spacer-x;
