--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -6,7 +6,7 @@
 }
 
 .create-topics-notice {
-  margin-bottom: ($spacer-lg - $card-margin-y);
+  margin-bottom: ($spacer-lg - $spacer-y);
 }
 
 #list-area {
