--- a/scss/mobile/_topic-post.scss
+++ b/scss/mobile/_topic-post.scss
@@ -53,8 +53,8 @@
   }
 
   .combobox {
-    margin-right: $card-margin-x;
-    margin-bottom: $card-margin-y;
+    margin-right: $spacer-x;
+    margin-bottom: $spacer-y;
     width: auto !important;
   }
 }
