Update vars for button

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -224,13 +224,13 @@ $btn-height:               $control-height !default;
 $btn-height-lg:            $control-height-lg !default;
 $btn-height-sm:            $control-height-sm !default;
 $btn-font-size:            $font-size-base !default;
-$btn-font-size-lg:         ($font-size-base + 1) !default;
-$btn-font-size-sm:         ($font-size-base - 1) !default;
+$btn-font-size-lg:         ($btn-font-size + 1) !default;
+$btn-font-size-sm:         ($btn-font-size - 1) !default;
 $btn-font-weight:          500 !default;
 $btn-line-height:          1 !default;
-$btn-padding-x:            $spacer-x !default;
-$btn-padding-x-lg:         $spacer-x !default;
-$btn-padding-x-sm:         $spacer-x !default;
+$btn-padding-x:            $spacer !default;
+$btn-padding-x-lg:         $spacer !default;
+$btn-padding-x-sm:         $spacer !default;
 $btn-padding-y:            (($btn-height - $btn-font-size * $btn-line-height) / 2) !default;
 $btn-padding-y-lg:         (($btn-height-lg - $btn-font-size-lg * $btn-line-height) / 2) !default;
 $btn-padding-y-sm:         (($btn-height-sm - $btn-font-size-sm * $btn-line-height) / 2) !default;
