--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -251,8 +251,8 @@ $card-color-dark:       unquote('$primary') !default;
 $card-color-light:      unquote('$primary') !default;
 $card-inner-spacer-x:   $spacer-x !default;
 $card-inner-spacer-y:   $spacer-y !default;
-$card-padding-x:        $spacer-x !default;
-$card-padding-y:        $spacer-y !default;
+$card-padding-x:        $spacer !default;
+$card-padding-y:        $spacer !default;
 
 
 
