--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -1,7 +1,7 @@
 #bulk-select {
   background-color: transparent;
   padding: 0;
-  top: ($btn-height + $header-height + $header-margin-y + $spacer-lg);
+  top: ($btn-height + $header-height + $spacer-y + $spacer-lg);
   right: $spacer-x;
 }
 
